Fix menu price alignments in wider width resolutions.

--- a/src/scss/blocks/_site-main.scss
+++ b/src/scss/blocks/_site-main.scss
@@ -86,7 +86,7 @@ h4 {
 
 .item__price {
   grid-row: 1;
-  grid-column: 8;
+  grid-column: 3;
 }
 
 .item__description {
